fix: bleeding page width

--- a/s/index.css
+++ b/s/index.css
@@ -1,6 +1,20 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Glory&family=Red+Hat+Display:wght@700&display=swap');
 
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+
+	::-webkit-scrollbar { width: 10px; }
+	::-webkit-scrollbar-track { background: #111; border-radius: 1em; }
+	::-webkit-scrollbar-thumb { background: #444; border-radius: 1em; }
+	::-webkit-scrollbar-thumb:hover { background: #777; }
+
+	scrollbar-color: #222 #111;
+	scrollbar-width: thin;
+}
+
 html {
 	font-size: 16px;
 	font-family: "Glory", serif;
@@ -20,20 +34,6 @@ html, body {
 }
 
 body { padding-bottom: 10em; }
-
-* {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
-
-	::-webkit-scrollbar { width: 10px; }
-	::-webkit-scrollbar-track { background: #111; border-radius: 1em; }
-	::-webkit-scrollbar-thumb { background: #444; border-radius: 1em; }
-	::-webkit-scrollbar-thumb:hover { background: #777; }
-
-	scrollbar-color: #222 #111;
-	scrollbar-width: thin;
-}
 
 a { color: deepskyblue; }
 a:visited { color: skyblue; }
@@ -64,7 +64,7 @@ h1, h2, h3, h4, h5, h6 {
 
 main {
 	width: 200em;
-	max-width: 100vw;
+	max-width: 100%;
 	margin: auto;
 	padding-bottom: 4em;
 
